@@ -574,6 +574,74 @@ name|defVal
 return|;
 block|}
 block|}
+comment|/**      * Determine the configured block scanner interval.      *      * For compatibility with prior releases of HDFS, if the      * configured value is zero then the scan period is      * set to 3 weeks.      *      * If the configured value is less than zero then the scanner      * is disabled.      *      * @param conf Configuration object.      * @return block scan period in milliseconds.      */
+DECL|method|getConfiguredScanPeriodMs (Configuration conf)
+specifier|private
+specifier|static
+name|long
+name|getConfiguredScanPeriodMs
+parameter_list|(
+name|Configuration
+name|conf
+parameter_list|)
+block|{
+name|long
+name|tempScanPeriodMs
+init|=
+name|getUnitTestLong
+argument_list|(
+name|conf
+argument_list|,
+name|INTERNAL_DFS_DATANODE_SCAN_PERIOD_MS
+argument_list|,
+name|TimeUnit
+operator|.
+name|MILLISECONDS
+operator|.
+name|convert
+argument_list|(
+name|conf
+operator|.
+name|getLong
+argument_list|(
+name|DFS_DATANODE_SCAN_PERIOD_HOURS_KEY
+argument_list|,
+name|DFS_DATANODE_SCAN_PERIOD_HOURS_DEFAULT
+argument_list|)
+argument_list|,
+name|TimeUnit
+operator|.
+name|HOURS
+argument_list|)
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|tempScanPeriodMs
+operator|==
+literal|0
+condition|)
+block|{
+name|tempScanPeriodMs
+operator|=
+name|TimeUnit
+operator|.
+name|MILLISECONDS
+operator|.
+name|convert
+argument_list|(
+name|DFS_DATANODE_SCAN_PERIOD_HOURS_DEFAULT
+argument_list|,
+name|TimeUnit
+operator|.
+name|HOURS
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|tempScanPeriodMs
+return|;
+block|}
 annotation|@
 name|SuppressWarnings
 argument_list|(
@@ -630,38 +698,9 @@ name|this
 operator|.
 name|scanPeriodMs
 operator|=
-name|Math
-operator|.
-name|max
-argument_list|(
-literal|0L
-argument_list|,
-name|getUnitTestLong
+name|getConfiguredScanPeriodMs
 argument_list|(
 name|conf
-argument_list|,
-name|INTERNAL_DFS_DATANODE_SCAN_PERIOD_MS
-argument_list|,
-name|TimeUnit
-operator|.
-name|MILLISECONDS
-operator|.
-name|convert
-argument_list|(
-name|conf
-operator|.
-name|getLong
-argument_list|(
-name|DFS_DATANODE_SCAN_PERIOD_HOURS_KEY
-argument_list|,
-name|DFS_DATANODE_SCAN_PERIOD_HOURS_DEFAULT
-argument_list|)
-argument_list|,
-name|TimeUnit
-operator|.
-name|HOURS
-argument_list|)
-argument_list|)
 argument_list|)
 expr_stmt|;
 name|this
@@ -796,9 +835,9 @@ operator|(
 name|conf
 operator|.
 name|scanPeriodMs
-operator|)
 operator|>
 literal|0
+operator|)
 operator|&&
 operator|(
 name|conf
