@@ -2259,6 +2259,18 @@ name|RoundRobinVolumeChoosingPolicy
 argument_list|<>
 argument_list|()
 decl_stmt|;
+name|conf
+operator|.
+name|setLong
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_DATANODE_SCAN_PERIOD_HOURS_KEY
+argument_list|,
+operator|-
+literal|1
+argument_list|)
+expr_stmt|;
 specifier|final
 name|BlockScanner
 name|blockScanner
